<resources>
    <string name="app_name">Let\'s Go To ATEITH</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginTitle">Let\'s go to ATEITH</string>
    <string name="loginText">User login page</string>
    <string name="usernameHint">Username:</string>
    <string name="username" />
    <string name="passwordHint">Password not supported yet</string>
    <string name="loginButtonText">Login</string>
    <string name="registerText">Register</string>
    <string name="aboutText">About</string>
    <string name="title_activity_main">Welcome </string>
    <string name="title_activity_own_car">Register a car</string>
    <string name="howManyPeople">How many people can you transfer?</string>
    <string name="whichDay">On which weekday ?</string>
    <string name="depTime">Approximate time of departure</string>
    <string name="retTime">Approximate time of return</string>
    <string name="freq">Frequency</string>
    <string name="lookingForCar">I am looking for a car</string>
    <string name="manageTrans">Manage Transportations</string>
    <string name="ownAcar">I own a car</string>
    <string name="searchButtonText">Search</string>
    <string name="submitButtonText">Submit</string>
    <string name="area">Select desired area</string>
    <string name="ownAcarPopUp">Congratulations! Your car has been registered!</string>
    <string name="dialog_resume">Continue</string>
    <string-array name="peopleSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="weekDaySpinner">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="timeSpinner">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="freqSpinner">
        <item>Once a week</item>
        <item>Once every two weeks</item>
        <item>Once a month</item>
    </string-array>
    <string-array name="areaSpinner">
        <item>East</item>
        <item>Center</item>
        <item>West</item>
    </string-array>
    <string name="title_activity_register">Register</string>
    <string name="welcomeText">Tell us a few things about you..</string>
    <string name="fullnameHint">Full name</string>
    <string name="schoolHint">School</string>
    <string name="email">University email address</string>
    <string name="facebook">Facebook link eg: /myName</string>
    <string name="signUp">Sign up</string>
    <string name="areaText">Choose your area of residence</string>
    <string name="title_activity_search">Search for a ride</string>
    <string name="title_activity_about">About this app</string>
    <string name="insideAboutTextTitle">About this app</string>
    <string name="insideAboutText1">This app is developed entirely by Tsalampounis Fotis.</string>
    <string name="insideAboutText2">For any suggestions or comments please do not hesitate to contact him at fsketo@gmail.com</string>
    <string name="insideAboutText3">The launcher icon of this app consists of two different images.</string>
    <string name="insideAboutText4">The person icon credit: Icon made by Freepik from www.flaticon.com is licensed under Creative Commons BY CC BY 3.0</string>
    <string name="insideAboutText5">The car icon is designed by Freepik.com</string>
    <string name="pref_username_key">pref_username</string>
    <string name="pref_id_key">pref_id</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_results">Search Results</string>
    <string name="registerPopUp">User created successfully! Welcome in a world without buses!</string>
    <string name="transpPopUp">Transport Registered successfully! Welcome in a world without buses!</string>
    <string name="ownAcarPopUpTitle">Car Registration</string>
    <string name="ownAcarDataPopUpTitle">Personal data sharing warning</string>
    <string name="ownAcarDataPopUp">If you choose to proceed your account data will become available to any other ATEITH students searching for a ride. Are you sure you want to continue?</string>
    <string name="dialogCancel">Cancel</string>
    <string name="userRegPopup">User Registration</string>
    <string name="pref_key">session</string>
    <string name="transpRegPopup">Transport Registration</string>
    <string name="usernameErrorHint">Insert Username</string>
    <string name="fullnameErrorHint">Insert Full name</string>
    <string name="schoolErrorHint">Insert School</string>
    <string name="emailErrorHint">Insert Email</string>
    <string name="emailTeitheErrorHint">Please use your Teithe email address</string>
    <string name="ownACarTitle">Register your car</string>
    <string name="searchTitle">Search for a ride</string>
    <string name="title_activity_manage_transportations">ManageTransportationsActivity</string>
    <string name="transpPopUpText">You have succesfuly registered in this transport.</string>
    <string name="title_activity_transport_details">TransportDetailsActivity</string>
    <string name="title_activity_display_transp_user_reg">DisplayTranspUserRegActivity</string>
    <string name="deleteFromTransportTitle">Delete from transport</string>
    <string name="deleteFromTransport">Are you sure you want to remove your self from this transport?</string>
    <string name="deleteTransportTitle">Delete transportation</string>
    <string name="deleteTransport">Are you sure you want to delete this transportation?</string>
    <string name="deleteFromTransport1">Are you sure you want to remove this person from this transport?</string>
    <string name="pref_key2">managetransp</string>
</resources>
