<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar" />-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:id="@+id/main_content">-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeText"
            android:id="@+id/welcomeText"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/usernameHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/fullnameHint"
            android:ems="10"
            android:id="@+id/fullname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/school"
            android:hint="@string/schoolHint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areaText"
                android:id="@+id/areaTextView" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/areaSpinner"
                android:entries="@array/areaSpinner"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facebookLink"
            android:hint="@string/facebook"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/signUp"
            android:layout_gravity="center_horizontal"/>

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/signUp"-->
            <!--android:id="@+id/signUpButton"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!--</LinearLayout>-->
    </LinearLayout>
</LinearLayout>
