<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/main_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginTitle"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:text="@string/loginText"
        android:id="@+id/loginText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal"
        android:text="@string/username"
        android:layout_marginTop="76dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/usernameHint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:password="true"
        android:hint="@string/passwordHint"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:editable="false" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/loginButtonText"
            android:layout_gravity="center_horizontal"/>

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/loginButtonText"-->
        <!--android:id="@+id/loginButton"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="20dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:id="@+id/registerText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:textSize="20sp"
        android:enabled="true"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutText"
        android:id="@+id/aboutText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorAccent"  />

</LinearLayout>

</LinearLayout>
