<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/scrollView3"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <!--<include-->
            <!--android:id="@+id/toolbar"-->
            <!--layout="@layout/toolbar" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/insideAboutTextTitle"
            android:id="@+id/insideAboutTextTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:textSize="34sp"
            android:layout_marginBottom="25dp"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="@string/insideAboutTextTitle"-->
            <!--android:id="@+id/insideAboutTextTitle"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insideAboutText1"
            android:id="@+id/insideAboutText1"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insideAboutText2"
            android:id="@+id/insideAboutText2"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insideAboutText3"
            android:id="@+id/insideAboutText3"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insideAboutText4"
            android:id="@+id/insideAboutText4"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insideAboutText5"
            android:id="@+id/insideAboutText5" />
    </LinearLayout>
</ScrollView>

