<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:id="@+id/toolbar_Linear">
    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar" />-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:id="@+id/main_content">-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whichDay"
                android:id="@+id/whichDay" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/whichDaySpinner"
                android:spinnerMode="dialog"
                android:entries="@array/weekDaySpinner" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depTime"
                android:id="@+id/depTime" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/depTimeSpinner"
                android:entries="@array/timeSpinner"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retTime"
                android:id="@+id/retTime" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/retTimeSpinner"
                android:entries="@array/timeSpinner" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freq"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/freqSpinner"
                android:entries="@array/freqSpinner" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:id="@+id/area" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/areaSpinner"
                android:entries="@array/areaSpinner" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/submitButtonText"
                android:layout_gravity="center_horizontal"/>

            <!--<Button-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/submitButtonText"-->
                <!--android:id="@+id/submit_button" />-->
        </LinearLayout>


    </LinearLayout>
<!--</LinearLayout>-->
</LinearLayout>
